[gd_scene load_steps=4 format=3 uid="uid://ppjha2gmeypa"]

[ext_resource type="Script" path="res://Scripts/World/army_form.gd" id="1_t5y27"]
[ext_resource type="Texture2D" uid="uid://ptkmhxptot0q" path="res://Art/player_colors/blue_color.png" id="2_ntsq3"]
[ext_resource type="Texture2D" uid="uid://cyl65pr2i8wia" path="res://Art/elf_hero_druid.png" id="3_phgi2"]

[node name="ArmyForm" type="Node2D"]
script = ExtResource("1_t5y27")

[node name="sprite_color" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.235294)
position = Vector2(119, 154)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ntsq3")

[node name="sprite_unit" type="Sprite2D" parent="."]
position = Vector2(112, 144)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_phgi2")

[node name="DescriptionLabel" type="Label" parent="."]
offset_left = -672.0
offset_top = 49.0
offset_right = -148.0
offset_bottom = 366.0
theme_override_font_sizes/font_size = 150
text = "Bogumi≈Ç
Level 1"

[node name="MoveLabel" type="Label" parent="."]
offset_left = -231.0
offset_top = 524.0
offset_right = 236.0
offset_bottom = 701.0
theme_override_font_sizes/font_size = 150
text = "Move 3"
horizontal_alignment = 2
